import "Common.proto";
package spacecluster.io;

message GameObjState
{
	required uint32 XPos = 1;
	required uint32 YPos = 2;
	required uint32 Size = 3;
	required float Velocity = 4;
	required float Azimuth = 5;
}

message GameObjUpdate
{
	required uint32 ObjId = 2;
	required GameObjState ObjState = 3;
}
