syntax = "proto2";
package spacecluster;

message ServerInfo {
	required string ServerId = 1;
	required string ServerName = 2;
	required string ServerRegion = 3;
	required uint32 MaxPlayers = 4;
	required uint32 PlayerCount = 5;
	required uint32 TickRate = 6; // Hertz
	required uint32 FrameLookbackLength = 7; // Frames
	required uint32 PlayerKickTimeout = 8; // Seconds
	required uint64 LatCoordinate = 9;
	required uint64 LongCoordinate = 10;
	required uint64 LatSize = 11;
	required uint64 LongSize = 12;
}
